--- a/_config.yml
+++ b/_config.yml
@@ -124,3 +124,9 @@ category_archive:
 tag_archive:
   type: liquid
   path: /tags/
+
+analytics:
+  provider: "google-gtag"
+  google:
+    tracking_id: "G-SN618PWG0X"
+    anonymize_ip: false # default
