--- a/_config.yml
+++ b/_config.yml
@@ -20,14 +20,14 @@
 
 repository: erdaifuu/erdaifu.github.io
 
-title: Carl's Math Project
+title: Erdaifu's Math Project
 email: erdaifuu+website@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Class and textbook notes, guides on math olympiads, highschool mathematics guide, proof writing and LaTeX assistance, and everything you would need to excel in mathematics. 
 #url: "https://erdaifuu.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: erdaifuu
 github_username:  erdaifuu
-minimal_mistakes_skin: default
+minimal_mistakes_skin: sunrise
 search: true
 
 # Google Analytics
@@ -66,10 +66,14 @@ plugins:
   - jemoji
   - jekyll-include-cache
 
+# Images
+teaser: "/assets/images/math_placeholder.jpg"
+og_image: "/assets/images/avatar.jpg"
+
 author:
-  name   : "Carl Luo"
-  avatar : "/assets/images/bio-photo.jpg"
-  bio    : "My awesome biography constrained to a sentence or two goes here."
+  name   : "Erdaifu (Carl) Luo"
+  avatar : "/assets/images/avatar.jpg"
+  bio    : "High school student trying to learn higher school math"
   links:
     - label: "Website"
       icon: "fas fa-fw fa-link"
@@ -82,7 +86,7 @@ author:
       url: "https://github.com/erdaifuu"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/"
+      url: "https://instagram.com/erdaifuu"
 
 footer:
   links:
@@ -94,7 +98,7 @@ footer:
       url: "https://github.com/erdaifuu"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/"
+      url: "https://instagram.com/erdaifuu"
 
 defaults:
   # _posts
