--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,11 @@
 main:
-  - title: "Posts"
-    url: /posts/
-  - title: "Categories"
-    url: /categories/
-  - title: "Tags"
-    url: /tags/
+  - title: "Guides"
+    url: /guides/
+  - title: "Notes"
+    url: /notes/
+  - title: "Materials"
+    url: /materials/
   - title: "About"
     url: /about/
+  - title: "Google"
+    url: https://google.com
