Materials, Guides, and Notes

--- a/_config.yml
+++ b/_config.yml
@@ -119,6 +119,20 @@ defaults:
     values:
       layout: single
       author_profile: true
+  # _materials
+  - scope:
+      path: ""
+      type: materials
+    values:
+      layout: single
+      read_time: false
+      author_profile: false
+      share: true
+      toc: true
+      toc_label: "Materials Selection"
+      comments: true
+      sidebar:
+        nav: "materials"
 
 category_archive:
   type: liquid
