--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,8 +4,53 @@ main:
   - title: "Notes"
     url: /notes/
   - title: "Materials"
-    url: /materials/
+    url: /materials/navigation
   - title: "About"
     url: /about/
   - title: "Google"
     url: https://google.com
+
+materials:
+  - title: Using Materials
+    children:
+      - title: "Navigation"
+        url: /materials/navigation
+      - title: "Structure"
+        url: /docs/structure/
+      - title: "Installation"
+        url: /docs/installation/
+      - title: "Upgrading"
+        url: /docs/upgrading/
+
+  - title: Math Olympiads
+    children:
+      - title: "Past Tests"
+        url: /materials/past-tests
+      - title: "Navigation"
+        url: /docs/navigation/
+      - title: "UI Text"
+        url: /docs/ui-text/
+      - title: "Authors"
+        url: /docs/authors/
+      - title: "Layouts"
+        url: /docs/layouts/
+
+  - title: Content
+    children:
+      - title: "Working with Posts"
+        url: /docs/posts/
+      - title: "Working with Pages"
+        url: /docs/pages/
+      - title: "Working with Collections"
+        url: /docs/collections/
+      - title: "Helpers"
+        url: /docs/helpers/
+      - title: "Utility Classes"
+        url: /docs/utility-classes/
+
+  - title: Extras
+    children:
+      - title: "Stylesheets"
+        url: /docs/stylesheets/
+      - title: "JavaScript"
+        url: /docs/javascript/
