--- a/_config.yml
+++ b/_config.yml
@@ -123,7 +123,7 @@ defaults:
 
 category_archive:
   type: liquid
-  path: /categories/
+  path: /guides/
 tag_archive:
   type: liquid
   path: /tags/
