Updated Materials Layout

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,42 +15,23 @@ materials:
     children:
       - title: "Navigation"
         url: /materials/navigation/
-      - title: "Structure"
-        url: /docs/structure/
-      - title: "Installation"
-        url: /docs/installation/
-      - title: "Upgrading"
-        url: /docs/upgrading/
 
   - title: Math Olympiads
     children:
       - title: "Past Tests"
         url: /materials/past-tests/
-      - title: "Navigation"
-        url: /docs/navigation/
-      - title: "UI Text"
-        url: /docs/ui-text/
-      - title: "Authors"
-        url: /docs/authors/
-      - title: "Layouts"
-        url: /docs/layouts/
 
-  - title: Content
+  - title: High School Mathematics
     children:
-      - title: "Working with Posts"
-        url: /docs/posts/
-      - title: "Working with Pages"
-        url: /docs/pages/
-      - title: "Working with Collections"
-        url: /docs/collections/
-      - title: "Helpers"
-        url: /docs/helpers/
-      - title: "Utility Classes"
-        url: /docs/utility-classes/
+      - title: "Work In Progress"
+        url: /materials/wip/
 
-  - title: Extras
+- title: University Mathematics
     children:
-      - title: "Stylesheets"
-        url: /docs/stylesheets/
-      - title: "JavaScript"
-        url: /docs/javascript/
+      - title: "Work In Progress"
+        url: /materials/wip/
+
+  - title: LaTeX & NeoVim
+    children:
+      - title: "Work In Progress"
+        url: /materials/wip/
